# OPAQUE.Net

./: .gitignore  BUILDING.md  Cargo.toml  README.md  SECURITY.md  package-lock.json
.Net/OPAQUE.Net/: OPAQUE.Net.csproj  OPAQUE.Net.sln  OpaqueClient.cs  OpaqueServer.cs
.Net/OPAQUE.Net/Base/: OpaqueClient.cs  OpaqueFactory.cs  OpaqueServer.cs
.Net/OPAQUE.Net/Base/Exceptions/: StringParamIsEmptyException.cs
.Net/OPAQUE.Net/Base/Handles/: BaseHandle.cs  FinishClientLoginResultHandler.cs  FinishClientRegistrationResultHandle.cs  StartClientLoginResultHandle.cs  StartClientRegistrationResultHandle.cs  StartServerLoginResultHandle.cs  StringHandle.cs
.Net/OPAQUE.Net/Base/Helpers/: FunctionHelper.cs
.Net/OPAQUE.Net/Base/Results/: FinishClientLoginResult.cs  FinishClientRegistrationResult.cs  StartClientLoginResult.cs  StartClientRegistrationResult.cs  StartServerLoginResult.cs
.Net/OPAQUE.Net/Helpers/: FunctionHelper.cs
.Net/OPAQUE.Net/Linux/: LinuxOpaqueClient.cs  LinuxOpaqueServer.cs
.Net/OPAQUE.Net/Linux/Handles/: LinuxFinishClientLoginResultHandler.cs  LinuxStartClientLoginResultHandle.cs  (+4 more)
.Net/OPAQUE.Net/Types/: CreateServerRegistrationResponseParams.cs  CustomIdentifiers.cs  FinishClientLoginParams.cs  FinishClientRegistrationParams.cs  FinishServerLoginParams.cs  StartClientLoginParams.cs  StartClientRegistrationParams.cs  StartServerLoginParams.cs
.Net/OPAQUE.Net/Windows/: WindowsOpaqueClient.cs  WindowsOpaqueServer.cs
.Net/Test/: OpaqueTest.cs  Test.csproj
.github/workflows/: branchChecks.yaml  publish.yaml
src/: csharp.rs  lib.rs  types.rs
(+21 files in other folders)
