[package]
name = "opaque"
version = "0.8.0"
authors = [
  "Stefan Oestreicher <oestef@gmail.com>",
  "Nik Graf <nik@nikgraf.com>",
]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = []
p256 = ["dep:p256"]

[dependencies]
opaque-ke = { version = "3.0.0-pre.4", features = ["argon2"] }
rand = { version = "0.8.5" }
getrandom = { version = "0.2.12", features = ["js", "wasm-bindgen"] }
argon2 = "0.5"
p256 = { version = "0.13", default-features = false, features = [
  "hash2curve",
  "voprf",
], optional = true }
base64 = "0.21.7"
serde = { version = "1.0.169", features = ["derive"] }
libc = "0.2"
generic-array = "0.14"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
